	- Réseau :
		- interface complète
		- mécanismes de connexion presque complets (manque la récupération de déconnexion, etc.)
		- mécanismes de jeu terminés mais le système évènementiel est à refaire entièrement pour économiser la BP

+ beta.020
	- Moteur :
		- correction d'un bug dans le chargement des bombes (complètion des gestures)
	- GUI :
		- indicateur d'occupation de CPU
	- IA :
		- modèle de simulation
		- bombage automatique des IA inactives, avec inclusion dans les options de la GUI
	- stats :
		- correction d'un bug concernant le classement des joueurs en fonctions du type
	- Divers :
		- ébauche de mode réseau
		- animation d'apparition des bombes
		- nouveau thème pour le tournoi 4
		- nouveaux niveaux pour la qualif et le tournoi: bombfest, qualif4, hurry
		- mise à jour de l'année du copyright de 2009-2010 en 2010-2011

+ beta.021
	- GUI :
		- message console pendant le jeu
		- occupation temps réel des IA
	- IA :
		- modèle allégé de simulation
		- extension de A* considérant le temps
		- implémentation de l'algo de Dijkstra
		- nouvelles fonctions permettant une approximation à travers les obstacles
		- précision de l'algorithme général
		- systématisation de la sortie texte
		- systématisation de la mesure du temps pour les appels de méthodes
		- systématisation de la sortie graphique
		- système de cas/critères/combinaisons pour le calcul d'utilité
		- affichage de toutes les combinaisons définies, avec leur valeur d'utilité
		- nouvelle IA de test : Simplet
		- possibilité de tester l'agent hors-ligne
	- stats :
	- ressources :
		- thèmes SBM1 arena, circles, hal, power, speed & warp
		- tous les niveaux des modes histoire et arène
	- Divers :
		- nouveau thème pour le tournoi 5
		- nouveau tournoi pour la 5ème édition
		- mise à jour de l'année du copyright de 2010-2011 en 2011-2012
		
+ beta.022
	- nouvelles ia
	- nouveau tournoi
	- intégration de toutes les màj successives des version 21.x
		