@@ -53,7 +53,7 @@ public class ProfileSubPanel extends TableSubPanel
 	}
 		
 	/////////////////////////////////////////////////////////////////
-	// ROUND			/////////////////////////////////////////////
+	// PROFILE			/////////////////////////////////////////////
 	/////////////////////////////////////////////////////////////////
 	private Profile profile;
 
